# outline-ws-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  Cargo.toml  PATCHES.md  README.md  README.ru.md  config-router.toml  config-router.yaml  config.toml  config.yaml  fix-h3-poll-write.patch  h3-0.0.8-git.patch  h3-0.0.8-local.patch  install-keenetic.sh  install.sh  rustfmt.toml  sockudo-ws-mips.patch
.cargo/: config.toml
crates/outline-metrics/: Cargo.toml
crates/outline-metrics/src/: active_uplink.rs  lib.rs  process.rs  registration.rs  session.rs  snapshot.rs  snapshot_types.rs  stub.rs  tests.rs  transport.rs  tun.rs
crates/outline-metrics/src/registration/: core.rs  macros.rs  mod.rs  probe.rs  process.rs  transport.rs  tun.rs  uplink.rs
crates/outline-metrics/src/registration/tests/: uplink.rs
crates/outline-metrics/src/tests/: mod.rs
crates/outline-routing/: Cargo.toml
crates/outline-routing/src/: cidr.rs  config.rs  lib.rs  table.rs
crates/outline-routing/src/tests/: cidr.rs  table.rs
crates/outline-transport/: Cargo.toml
crates/outline-transport/src/: ack_prefix.rs  cert_check.rs  collections.rs  config.rs  dial_plan.rs  dns.rs  dns_cache.rs  downlink_replay.rs  error_classify.rs  fingerprint_profile.rs  frame_io.rs  frame_io_quic.rs  frame_io_ws.rs  guards.rs  lib.rs  quic_connect.rs  resumption.rs  shared_cache.rs  shared_dial.rs  socket.rs  tcp_transport.rs  tests.rs  tls.rs  udp_transport.rs  url_utils.rs  vless.rs  vless_quic_mux.rs  vless_udp_hybrid.rs  ws_mode_cache.rs  ws_stream.rs  xhttp_mode_cache.rs  xhttp_submode_cache.rs
crates/outline-transport/src/cert_check/tests/: cert_check.rs  fixture_cert.der
crates/outline-transport/src/h2/: mod.rs  shared.rs
crates/outline-transport/src/h2/tests/: shared.rs
crates/outline-transport/src/h3/: mod.rs  shared.rs
crates/outline-transport/src/h3/tests/: shared.rs
crates/outline-transport/src/quic/: connection.rs  dial.rs  mod.rs  oversize.rs  tls_config.rs  vless_udp.rs
crates/outline-transport/src/quic/tests/: oversize.rs
crates/outline-transport/src/tcp_transport/: mod.rs  reader.rs  writer.rs
crates/outline-transport/src/tcp_transport/reader/: mod.rs  ss2022.rs  transport.rs
crates/outline-transport/src/tcp_transport/reader/tests/: mod.rs
crates/outline-transport/src/tcp_transport/writer/: mod.rs  ss2022.rs  transport.rs
crates/outline-transport/src/tests/: ack_prefix.rs  config.rs  dns_cache.rs  downlink_replay.rs  fingerprint_profile.rs  frame_io_ws.rs  mod.rs  resumption.rs  udp_transport.rs  vless.rs  xhttp_mode_cache.rs  xhttp_submode_cache.rs
crates/outline-transport/src/vless/: header.rs  mod.rs  tcp.rs  udp.rs  udp_mux.rs  uuid.rs
crates/outline-transport/src/vless/tests/: vless.rs
crates/outline-transport/src/xhttp/: h1.rs  h2.rs  h3.rs  mod.rs  stream.rs
crates/outline-transport/src/xhttp/tests/: packet_up.rs  packet_up_h1.rs  sink_backpressure.rs
crates/outline-tun/: Cargo.toml
crates/outline-tun/src/: atomic_counter.rs  classify.rs  config.rs  device.rs  engine.rs  error_classify.rs  error_text.rs  frag.rs  icmp.rs  lib.rs  routing.rs  tests.rs  utils.rs  writer.rs
crates/outline-tun/src/defrag/: chunk.rs  mod.rs  tests.rs  v4.rs  v6.rs
crates/outline-tun/src/tcp/: maintenance.rs  mod.rs  tests.rs  validation.rs  wire.rs
crates/outline-tun/src/tcp/engine/: connect.rs  eviction.rs  flow_ops.rs  mod.rs  packet.rs  scheduler.rs  tasks.rs  tests.rs
crates/outline-tun/src/tcp/engine/tasks/: cleanup.rs  maintenance.rs  mod.rs  upstream.rs
crates/outline-tun/src/tcp/engine/tasks/upstream/: connect.rs  direct_reader.rs  mod.rs  reader.rs
crates/outline-tun/src/tcp/engine/tests/: mod.rs
crates/outline-tun/src/tcp/state_machine/: congestion.rs  deliver.rs  mod.rs  packets.rs  policy.rs  recv.rs  send.rs  seq.rs  transitions.rs  types.rs
crates/outline-tun/src/tcp/state_machine/send/: buffer.rs  flush.rs  metrics.rs  mod.rs  probes.rs
crates/outline-tun/src/tcp/state_machine/tests/: policy.rs
crates/outline-tun/src/tcp/tests/: mod.rs
crates/outline-tun/src/tests/: engine.rs  icmp.rs  icmp_ptb.rs  ipsec_bypass.rs  mod.rs  routing.rs
crates/outline-tun/src/udp/: engine.rs  lifecycle.rs  mod.rs  types.rs  wire.rs
crates/outline-tun/src/udp/tests/: mod.rs
crates/outline-tun/src/wire/: mod.rs  test_utils.rs
crates/outline-tun/src/wire/tests/: mod.rs
crates/outline-uplink/: Cargo.toml
crates/outline-uplink/src/: config.rs  dial.rs  error_classify.rs  error_text.rs  lib.rs  penalty.rs  probe.rs  registry.rs  routing_key.rs  selection.rs  share_link.rs  state.rs  tests.rs  time.rs  types.rs  utils.rs
crates/outline-uplink/src/manager/: active_wire.rs  candidates.rs  cert_check.rs  failures.rs  h3_downgrade.rs  mod.rs  mode_downgrade.rs  probe_loop.rs  reporting.rs  snapshot.rs  standby.rs  standby_pool.rs  state.rs  status.rs  sticky.rs  sticky_routing.rs  test_helpers.rs
crates/outline-uplink/src/manager/cert_check/tests/: cert_check.rs
crates/outline-uplink/src/manager/probe/: h3_recovery.rs  keepalive.rs  mod.rs  outcome.rs  scheduler.rs  warm_tcp.rs  warm_udp.rs  wire.rs
crates/outline-uplink/src/manager/probe/tests/: scheduler.rs  wire.rs
crates/outline-uplink/src/manager/standby/: ctx.rs  keepalive.rs  mod.rs  refill.rs
crates/outline-uplink/src/manager/tests/: snapshot.rs  test_helpers.rs
crates/outline-uplink/src/probe/: dns.rs  http.rs  metrics.rs  mod.rs  tcp_tunnel.rs  test_loopback.rs  tls.rs  transport.rs  ws.rs
crates/outline-uplink/src/probe/tests/: http.rs  tcp_tunnel.rs  tls.rs
crates/outline-uplink/src/tests/: error_classify.rs  error_text.rs  fallback.rs  mod.rs  penalty.rs  registry.rs  share_link.rs  state.rs
docs/: TUN-PMTUD.md  TUN-PMTUD.ru.md  UPLINK-CONFIGURATIONS.md  UPLINK-CONFIGURATIONS.ru.md
grafana/: README.md  outline-ws-rust-dashboard.json  outline-ws-rust-hang-diagnostics.json  outline-ws-rust-native-burst-dashboard.json  outline-ws-rust-tun-tcp-dashboard.json  outline-ws-rust-uplinks-dashboard.json  outline-ws-rust-ws-tcp-live-dashboard.json
src/: atomic_counter.rs  bypass.rs  (+27 more)
(+260 files in other folders)
