[package]
name = "outline-ws-rust"
version = "1.0.4"
edition = "2024"

# Feature flags
# -------------
# default: VM/server build — H3/QUIC + Prometheus metrics
# router:  stripped build for memory-constrained devices
#          disables H3/QUIC and Prometheus metrics
#          build with: cargo zigbuild --profile release-router --no-default-features --features router --target armv7-unknown-linux-musleabihf
[features]
default = ["h3", "metrics", "env-filter", "multi-thread"]
h3 = ["dep:h3", "dep:h3-quinn", "dep:quinn", "dep:once_cell", "sockudo-ws/http3"]
metrics = ["dep:prometheus", "dep:serde_json", "hyper/server"]
# env-filter: dynamic log level via RUST_LOG (pulls in regex, ~300 KB on MIPS).
# Disabled in router builds — log level is hardcoded to WARN instead.
env-filter = ["tracing-subscriber/env-filter"]
# multi-thread: tokio work-stealing scheduler. Disabled in router builds (always
# single-threaded), removing ~100–200 KB of scheduler code on MIPS.
multi-thread = ["tokio/rt-multi-thread"]
router = []  # convenience alias: use with --no-default-features --features router

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.8"
bytes = "1.10"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
hkdf = "0.12"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
md5 = "0.7"
pin-project-lite = "0.2"
once_cell = { version = "1.21", optional = true }
prometheus = { version = "0.13", optional = true }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha1 = "0.10"
sockudo-ws = { path = "vendor/sockudo-ws", package = "sockudo-ws", default-features = false, features = ["rustls-webpki-roots", "ring", "fastrand"] }
socket2 = "0.5"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log"] }
url = { version = "2.5", features = ["serde"] }
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Router build: prioritises binary size over throughput.
# Use with: cargo zigbuild --profile release-router --no-default-features --features router
[profile.release-router]
inherits = "release"
opt-level = "z"

[patch.crates-io]
h3 = { path = "vendor/h3" }
