[workspace]
members = [".", "crates/outline-metrics", "crates/outline-net", "crates/outline-routing", "crates/outline-ss2022", "crates/outline-transport", "crates/outline-tun", "crates/outline-uplink", "crates/shadowsocks-crypto", "crates/socks5-proto"]

[package]
name = "outline-ws-rust"
version = "1.3.1"
edition = "2024"

# Feature flags
# -------------
# default: VM/server build — H3/QUIC + Prometheus metrics + built-in dashboard
# router:  stripped build for memory-constrained devices
#          disables H3/QUIC, Prometheus metrics, and built-in dashboard
#          build with: cargo zigbuild --profile release-router --no-default-features --features router --target armv7-unknown-linux-musleabihf
[features]
default = ["h3", "metrics", "control", "dashboard", "env-filter", "multi-thread", "mimalloc", "tun"]
tun = ["dep:outline-tun", "outline-tun/metrics", "outline-metrics/tun"]   # TUN device support (transparent proxy)
h3 = ["outline-transport/h3", "outline-tun?/quic", "outline-uplink/quic"]
metrics = ["outline-metrics/prometheus", "outline-transport/metrics", "outline-uplink/metrics", "dep:serde_json", "hyper/server"]
# control: authenticated mutating HTTP plane (manual uplink switch etc.).
# Independent of `metrics`; both planes bind separate sockets but share hyper's server stack.
control = ["hyper/server", "dep:serde_json", "dep:toml_edit"]
# dashboard: built-in multi-instance monitor/activation UI. Enabled in VM/server
# builds, disabled in stripped router builds to save binary size.
dashboard = ["hyper/server", "dep:serde_json"]
# env-filter: dynamic log level via RUST_LOG (pulls in regex, ~300 KB on MIPS).
# Disabled in router builds — log level is hardcoded to WARN instead.
env-filter = ["tracing-subscriber/env-filter"]
# multi-thread: tokio work-stealing scheduler. Disabled in router builds (always
# single-threaded), removing ~100–200 KB of scheduler code on MIPS.
multi-thread = ["tokio/rt-multi-thread"]
mimalloc = ["dep:mimalloc"]
router = ["control"]  # convenience alias: use with --no-default-features --features router

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
lru = { version = "0.12", default-features = false }
mimalloc = { version = "0.1", default-features = false, optional = true }
outline-metrics = { path = "crates/outline-metrics", default-features = false }
outline-net = { path = "crates/outline-net" }
outline-routing = { path = "crates/outline-routing" }
outline-transport = { path = "crates/outline-transport" }
outline-tun = { path = "crates/outline-tun", default-features = false, optional = true }
outline-uplink = { path = "crates/outline-uplink", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
shadowsocks-crypto = { path = "crates/shadowsocks-crypto" }
socks5-proto = { path = "crates/socks5-proto" }
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
toml_edit = { version = "0.22", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "tracing-log"] }
url = { version = "2.5", features = ["serde"] }
webpki-roots = "0.26"

[dev-dependencies]
outline-uplink = { path = "crates/outline-uplink", default-features = false, features = ["test-helpers"] }
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Router build: prioritises binary size over throughput.
# Use with: cargo zigbuild --profile release-router --no-default-features --features router
[profile.release-router]
inherits = "release"
opt-level = "z"

[patch.crates-io]
h3 = { path = "vendor/h3" }
