[package]
name = "outline-metrics"
version = "0.1.0"
edition = "2024"

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]
tun = []

[dependencies]
anyhow = "1.0"
prometheus = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["rt", "time"] }
tracing = "0.1"
