[package]
name = "outline-transport"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Raw QUIC transport (no HTTP/3 framing). Required by `h3` since both share
# the underlying quinn endpoint and TLS config builder.
quic = ["dep:quinn", "dep:once_cell"]
h3 = ["quic", "dep:h3", "dep:h3-quinn", "sockudo-ws/http3"]
metrics = ["outline-metrics/prometheus", "hyper/server"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hashbrown = "0.14"
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
once_cell = { version = "1.21", optional = true }
outline-metrics = { path = "../outline-metrics", default-features = false }
outline-net = { path = "../outline-net" }
outline-ss2022 = { path = "../outline-ss2022" }
parking_lot = "0.12"
pin-project-lite = "0.2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"], optional = true }
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
shadowsocks-crypto = { path = "../shadowsocks-crypto" }
socks5-proto = { path = "../socks5-proto" }
sockudo-ws = { path = "../../vendor/sockudo-ws", package = "sockudo-ws", default-features = false, features = ["rustls-webpki-roots", "ring", "fastrand"] }
tokio = { version = "1.44", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
thiserror = "2.0"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
webpki-roots = "0.26"
